# capstone_project

./: .env.dev  .env.test  .gitignore  README.md  pyproject.toml  requirements.txt
config/: env_config.py
data/raw/fitness_stats/: uncleaned_fitness_stats.csv
docs/: presentation.md
scripts/: run_app.py
src/etl/: run_etl.py
src/etl/extract/: extract.py  extract_fitness_stats.py
src/etl/load/: load.py  load_fitness_stats.py
src/etl/transform/: clean_fitness_stats.py  filter_fitness_stats.py  transform.py
src/streamlit/: app.py
src/streamlit/pages/: dashboard.py  fitness_progression.py  seasonal_patterns.py
src/utils/: file_utils.py  logging_utils.py
tests/component_tests/: test_extract_data.py  test_extract_fitness_stats_component.py  test_load_data.py  test_load_fitness_stats_component.py  test_transform_data.py  test_transform_fitness_stats_component.py
tests/e2e_tests/: test_etl_pipeline.py
tests/integration_tests/: test_extract_transform_intergration.py  test_load_intergration.py  test_transform_load_intergation.py
tests/unit_tests/: test_clean_fitness_stats.py  test_extract_fitness_stats.py  test_file_utils.py  test_filter_fitness_stats.py  test_load_fitness_stats.py  test_logging_utils.py
